manifests/gramps-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gramps-web-ingressroute
  namespace: gramps-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gramps.tokhirov.uz`)
      services:
        - name: gramps-web-grampsweb
          namespace: gramps-web
          port: 5000
  tls:
    certResolver: letsencrypt
