manifests/kubeapi.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kubeapi-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostSNI(`kubeapi.tokhirov.uz`)
      services:
        - name: kubernetes
          namespace: default
          port: 443
  tls:
    passthrough: true
