manifests/kubernetes-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingressroute
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kube.tokhirov.uz`)
      services:
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 80
  tls:
    certResolver: letsencrypt
